# news-aware-crypto-agent

./: .gitignore  AGENTS.md  README.md  config.example.yaml  pyproject.toml  streamlit_app.py
docs/: ARCHITECTURE.md  IMPLEMENTATION_PLAN.md  realtime_runner.md
legacy/: streamlit_app.py
src/trade_agent/: __init__.py  backtest.py  config.py  db.py  exchange.py  executor.py  intent.py  main.py  metrics.py  paper.py  risk.py  runner.py  schemas.py  web_api.py
src/trade_agent/apps/: __init__.py  cli.py  web.py
src/trade_agent/news/: __init__.py  features.py  normalize.py  rss.py
src/trade_agent/services/: __init__.py  alerts.py  analysis.py  approval.py  context.py  execution.py  external.py  ingest.py  portfolio.py  positions.py  propose.py  queries.py  reporting.py  status.py
src/trade_agent/store/: __init__.py  sqlite_store.py
src/trade_agent/strategies/: baseline.py  news_overlay.py
tests/: test_analysis.py  test_backtest_e2e.py  test_config.py  test_db_migrations.py  test_intent.py  test_live_guardrails.py  test_paper.py  test_paper_e2e.py  test_risk.py  test_rss_ingest.py  test_runner.py  test_store.py  test_strategies.py
tests/fixtures/: rss_sample.xml
web/: index.html
web/static/: app.js  styles.css
