[project]
name = "trade-agent"
version = "0.1.0"
description = "Local-first news-aware crypto spot trading agent"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "typer>=0.12.0",
  "PyYAML>=6.0.1",
  "python-dotenv>=1.0.1",
  "ccxt>=4.3.0",
  "feedparser>=6.0.11",
  "vaderSentiment>=3.3.2",
  "rich>=13.7.1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "ruff>=0.5.0",
]
ui = [
  "streamlit>=1.36.0",
]

[project.scripts]
trade-agent = "trade_agent.main:app"

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
